@@ -141,4 +141,19 @@ void ICACHE_FLASH_ATTR db_dealloc(void *ptr)
     db_printf("Allocs: %d.\n", dbg_mem_n_alloc);
 }
 
+void ICACHE_FLASH_ATTR db_mem_list(void)
+{
+	unsigned short i = 0;
+	
+	while(i < dbg_mem_n_alloc)
+	{
+
+		db_printf("  %p size %d info: %s.\n",
+				  dbg_mem_alloc_infos[i].ptr,
+				  dbg_mem_alloc_infos[i].size,
+				  dbg_mem_alloc_infos[i].info);
+		i++;
+	}
+}
+
 #endif //DEBUG_MEM
